ACOM Project added

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 				</div>
 				<div class="col-lg-4 col-sm-6 brand web">
 					<div class="projects_item">
-						<img class="img-fluid" src="img/projects/acom/custom – 1@2x.png" alt="">
+						<img class="img-fluid" src="img/projects/acom/main_template.png" alt="">
 						<div class="projects_text">
 							<a href="portfolio-details.html#acomSection">
 								<h4>ACOM</h4>
