--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -241,6 +241,39 @@
 				</div>
 	
 			</div>
+
+			<div id="acomSection" class="container">
+				<div class="portfolio_details_inner">
+	
+					<div class="portfolio_right_text">
+						<h4>ACOM POS</h4>						
+					</div>
+	
+					<div class="img-row">
+						<div class="col-md-2 img-column">
+							<img src="img/projects/acom/login.png" alt="Nature" onclick="myFunction(this);">
+						</div>
+						<div class="col-md-2 img-column">
+							<img src="img/projects/acom/customer.png" alt="Nature" onclick="myFunction(this);">
+						</div>
+						<div class="col-md-2 img-column">
+							<img src="img/projects/acom/calculator.png" alt="Nature"
+								onclick="myFunction(this);">
+						</div>
+						<div class="col-md-2 img-column">
+							<img src="img/projects/acom/qr.png" alt="Nature" onclick="myFunction(this);">
+						</div>
+						<div class="col-md-2 img-column">
+							<img src="img/projects/acom/list.png" alt="Nature" onclick="myFunction(this);">
+						</div>
+						<div class="col-md-2 img-column">
+							<img src="img/projects/acom/order.png" alt="Nature" onclick="myFunction(this);">
+						</div>
+					</div>
+	
+				</div>
+	
+			</div>
 	</section>
 
 	<!--================Footer Area =================-->
