Added ogo merchant section

--- a/Ronin-doc/index.html
+++ b/Ronin-doc/index.html
@@ -28,7 +28,10 @@
 </head>
 
 <body id="welcome">
-	
+		<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+		<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		<script type="text/javascript" src="slick/slick.min.js"></script>
+						
 	<aside class="left-sidebar">
 
 		<nav class="left-nav">
