--- a/index.html
+++ b/index.html
@@ -219,15 +219,28 @@
 				</div>
 				<div class="col-lg-4 col-sm-6 brand work">
 					<div class="projects_item">
-						<img class="img-fluid" src="img/projects/projects-5.jpg" alt="">
+						<img class="img-fluid" src="img/projects/OGO/ogo.png" alt="">
 						<div class="projects_text">
 							<a href="portfolio-details.html">
-								<h4>3D Helmet Design</h4>
+								<h4>OGO Client App</h4>
 							</a>
-							<p>Client Project</p>
+							<p>Company Project</p>
 						</div>
 					</div>
 				</div>
+
+				<div class="col-lg-4 col-sm-6 brand work web">
+					<div class="projects_item">
+						<img class="img-fluid" src="img/projects/OGO/ogo.png" alt="">
+						<div class="projects_text">
+							<a href="portfolio-details.html#ogoMerchantSection">
+								<h4>OGO Merchant App</h4>
+							</a>
+							<p>Company Project</p>
+						</div>
+					</div>
+				</div>
+
 				<div class="col-lg-4 col-sm-6 brand work web">
 					<div class="projects_item">
 						<img class="img-fluid" src="img/projects/projects-6.jpg" alt="">
