Sampath robot banking installled

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -263,8 +263,68 @@
 
         <div id="ogoMerchantSection" class="container">
             <div class="portfolio_details_inner">
+
                 <div class="portfolio_right_text">
                     <h4>OGO Merchant</h4>
+                </div>
+
+                <div class="row">
+                    <div class="MultiCarousel" data-items="1,3,5,6" data-slide="1" id="MultiCarousel" data-interval="1000">
+                        <div class="MultiCarousel-inner">
+
+                            <!-- <div class="img-row"> -->
+                            <div class="item">
+                                <div class="pad15 img-column">
+                                    <img src="img/projects/OGO/merchant/login.png" alt="Nature" onclick="myFunction(this);">
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="pad15 img-column">
+                                    <img src="img/projects/OGO/merchant/home.png" alt="Nature" onclick="myFunction(this);">
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="pad15 img-column">
+                                    <img src="img/projects/OGO/merchant/qr.png" alt="Nature" onclick="myFunction(this);">
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="pad15 img-column">
+                                    <img src="img/projects/OGO/merchant/success.png" alt="Nature" onclick="myFunction(this);">
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="pad15 img-column">
+                                    <img src="img/projects/OGO/merchant/unsuccess.png" alt="Nature" onclick="myFunction(this);">
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="pad15 img-column">
+                                    <img src="img/projects/OGO/merchant/menu.png" alt="Nature" onclick="myFunction(this);">
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="pad15 img-column">
+                                    <img src="img/projects/OGO/merchant/tansaction1.png" alt="Nature" onclick="myFunction(this);">
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="pad15 img-column">
+                                    <img src="img/projects/OGO/merchant/filter.png" alt="Nature" onclick="myFunction(this);">
+                                </div>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary leftLst"><</button>
+                        <button class="btn btn-primary rightLst">></button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div id="ogoClientSection" class="container">
+            <div class="portfolio_details_inner">
+                <div class="portfolio_right_text">
+                    <h4>OGO Client</h4>
                 </div>
 
                 <div class="row">
@@ -274,53 +334,59 @@
 
                             <div class="item">
                                 <div class="pad15 img-column">
-                                    <img src="img/projects/OGO/merchant/login.png" alt="Nature" onclick="myFunction(this);">
+                                    <img src="img/projects/OGO/login.png" alt="Nature" onclick="myFunction(this);">
 
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="pad15 img-column">
-                                    <img src="img/projects/OGO/merchant/login.png" alt="Nature" onclick="myFunction(this);">
+                                    <img src="img/projects/OGO/card_list.png" alt="Nature" onclick="myFunction(this);">
 
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="pad15 img-column">
-                                    <img src="img/projects/OGO/merchant/login.png" alt="Nature" onclick="myFunction(this);">
+                                    <img src="img/projects/OGO/scan.png" alt="Nature" onclick="myFunction(this);">
 
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="pad15 img-column">
-                                    <img src="img/projects/OGO/merchant/login.png" alt="Nature" onclick="myFunction(this);">
+                                    <img src="img/projects/OGO/authenticate.png" alt="Nature" onclick="myFunction(this);">
 
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="pad15 img-column">
-                                    <img src="img/projects/OGO/merchant/login.png" alt="Nature" onclick="myFunction(this);">
+                                    <img src="img/projects/OGO/transaction_status.png" alt="Nature" onclick="myFunction(this);">
 
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="pad15 img-column">
-                                    <img src="img/projects/OGO/merchant/login.png" alt="Nature" onclick="myFunction(this);">
+                                    <img src="img/projects/OGO/transactions.png" alt="Nature" onclick="myFunction(this);">
 
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="pad15 img-column">
-                                    <img src="img/projects/OGO/merchant/login.png" alt="Nature" onclick="myFunction(this);">
+                                    <img src="img/projects/OGO/customize.png" alt="Nature" onclick="myFunction(this);">
 
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="pad15 img-column">
-                                    <img src="img/projects/OGO/merchant/login.png" alt="Nature" onclick="myFunction(this);">
+                                    <img src="img/projects/OGO/card_add.png" alt="Nature" onclick="myFunction(this);">
 
                                 </div>
                             </div>
 
+                            <div class="item">
+                                <div class="pad15 img-column">
+                                    <img src="img/projects/OGO/edit_profile.png" alt="Nature" onclick="myFunction(this);">
+
+                                </div>
+                            </div>
                         </div>
                         <button class="btn btn-primary leftLst"><</button>
                         <button class="btn btn-primary rightLst">></button>
@@ -330,63 +396,48 @@
             </div>
 
 
-            <div id="ogoMerchantSection" class="container">
-                <div class="portfolio_details_inner">
 
-                    <div class="portfolio_right_text">
-                        <h4>OGO Merchant</h4>
+        </div>
+
+        <div id="samSection" class="container">
+            <div class="portfolio_details_inner">
+
+                <div class="portfolio_right_text">
+                    <h4>Sampath Bank Robot Banking</h4>
+                    <ul class="list">
+                        <li><span style="width: 150px">Video Demo for tablet</span>: <a href="https://drive.google.com/open?id=1l3ESbc73MTDrpN4ssnjjHGt1mqB16x6t">Demo 1</a>
+                        </li>
+                        <li><span style="width: 150px">Video Demo for mobile</span>: <a href="https://drive.google.com/open?id=1mOgqwnlkLyz0Vh5zkt4HY0pz0jRuqIRz">Demo 2</a>
+                        </li>
+
+                        <li><span style="width: 150px">Video Demo for mobile</span>: <a href="https://drive.google.com/open?id=1wVtYHWu1lUyrEK67pOVWVzSQVq6QYiAq">Demo 3</a>
+                        </li>
+
+                        <li><span style="width: 150px">Video Demo for mobile</span>: <a href="https://drive.google.com/open?id=1o_5zq7hQegMLMw26DY_Pa4s2M_5NSEnP">Demo 4</a>
+                        </li>
+
+
+                    </ul>
+                </div>
+
+                <div class="img-row">
+                    <div class="col-md-4 img-column">
+                        <img src="img/projects/sam/tab.png" alt="Nature" onclick="myFunction(this);">
+                    </div>
+                    <div class="col-md-2 img-column">
+                        <img src="img/projects/sam/mobile_ui_1.png" alt="Nature" onclick="myFunction(this);">
+                    </div>
+                    <div class="col-md-2 img-column">
+                        <img src="img/projects/sam/mobile_ui_2.png" alt="Nature" onclick="myFunction(this);">
+                    </div>
+                    <div class="col-md-2 img-column">
+                        <img src="img/projects/sam/mobile_ui_3.png" alt="Nature" onclick="myFunction(this);">
                     </div>
 
-                    <div class="row">
-                        <div class="MultiCarousel" data-items="1,3,5,6" data-slide="1" id="MultiCarousel" data-interval="1000">
-                            <div class="MultiCarousel-inner">
-
-                                <!-- <div class="img-row"> -->
-                                <div class="item">
-                                    <div class="pad15 img-column">
-                                        <img src="img/projects/OGO/merchant/login.png" alt="Nature" onclick="myFunction(this);">
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="pad15 img-column">
-                                        <img src="img/projects/OGO/merchant/home.png" alt="Nature" onclick="myFunction(this);">
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="pad15 img-column">
-                                        <img src="img/projects/OGO/merchant/qr.png" alt="Nature" onclick="myFunction(this);">
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="pad15 img-column">
-                                        <img src="img/projects/OGO/merchant/success.png" alt="Nature" onclick="myFunction(this);">
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="pad15 img-column">
-                                        <img src="img/projects/OGO/merchant/unsuccess.png" alt="Nature" onclick="myFunction(this);">
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="pad15 img-column">
-                                        <img src="img/projects/OGO/merchant/menu.png" alt="Nature" onclick="myFunction(this);">
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="pad15 img-column">
-                                        <img src="img/projects/OGO/merchant/tansaction1.png" alt="Nature" onclick="myFunction(this);">
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="pad15 img-column">
-                                        <img src="img/projects/OGO/merchant/filter.png" alt="Nature" onclick="myFunction(this);">
-                                    </div>
-                                </div>
-                            </div>
-                            <button class="btn btn-primary leftLst"><</button>
-                            <button class="btn btn-primary rightLst">></button>
-                        </div>
+                    <div class="col-md-2 img-column">
+                        <img src="img/projects/sam/mobile_ui_4.png" alt="Nature" onclick="myFunction(this);">
                     </div>
+
                 </div>
 
             </div>
